{{$NEXT}}

0.002     2015-04-10 02:23:03 EDT
  - Update Changes datetime format
  - Use Git::GatherDir
  - Add some more options

0.001     2015-04-08 23:29:46-04:00 America/New_York
  - First release