@@ -11,7 +11,6 @@ Build.bat
 /Makefile.old
 /MANIFEST.bak
 /META.yml
-/META.json
 /MYMETA.*
 nytprof.out
 /pm_to_blib
