@@ -1,0 +1,73 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.035.
+use strict;
+use warnings;
+
+use 5.010;
+
+use ExtUtils::MakeMaker;
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "A plugin bundle for distributions built by DBOOK",
+  "AUTHOR" => "Dan Book <dbook\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "Dist-Zilla-PluginBundle-Author-DBOOK",
+  "EXE_FILES" => [],
+  "LICENSE" => "artistic_2",
+  "MIN_PERL_VERSION" => "5.010",
+  "NAME" => "Dist::Zilla::PluginBundle::Author::DBOOK",
+  "PREREQ_PM" => {
+    "Dist::Zilla" => 0,
+    "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+    "Dist::Zilla::Plugin::GithubMeta" => 0,
+    "Dist::Zilla::Plugin::MakeMaker::Awesome" => 0,
+    "Dist::Zilla::Plugin::MetaJSON" => 0,
+    "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+    "Dist::Zilla::Plugin::NextRelease" => 0,
+    "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
+    "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+    "Dist::Zilla::Plugin::RewriteVersion" => 0,
+    "Dist::Zilla::PluginBundle::Git" => 0,
+    "Moose" => 0
+  },
+  "TEST_REQUIRES" => {
+    "Test::More" => "0.88"
+  },
+  "VERSION" => "0.003",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "Dist::Zilla" => 0,
+  "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+  "Dist::Zilla::Plugin::GithubMeta" => 0,
+  "Dist::Zilla::Plugin::MakeMaker::Awesome" => 0,
+  "Dist::Zilla::Plugin::MetaJSON" => 0,
+  "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+  "Dist::Zilla::Plugin::NextRelease" => 0,
+  "Dist::Zilla::Plugin::Prereqs::FromCPANfile" => 0,
+  "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+  "Dist::Zilla::Plugin::RewriteVersion" => 0,
+  "Dist::Zilla::PluginBundle::Git" => 0,
+  "ExtUtils::MakeMaker" => 0,
+  "Moose" => 0,
+  "Test::More" => "0.88"
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
