@@ -26,13 +26,29 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  location = root
  
  [MetaProvides::Package]
- [CPANFile]
+ [Prereqs::FromCPANfile]
+ [Prereqs]
+ -phase = develop
+ Dist::Zilla::PluginBundle::Author::DBOOK = $VERSION
  
  [Git::Check]
+ allow_dirty = dist.ini
+ allow_dirty = Changes
+ allow_dirty = README.pod
+ allow_dirty = LICENSE
+ allow_dirty = META.json
+ allow_dirty = Makefile.PL
  [RewriteVersion]
  [NextRelease]
  format = %-9v %{yyyy-MM-dd HH:mm:ss VVV}d%{ (TRIAL RELEASE)}T
  [Git::Commit]
+ allow_dirty_match = ^lib/
+ allow_dirty = dist.ini
+ allow_dirty = Changes
+ allow_dirty = README.pod
+ allow_dirty = LICENSE
+ allow_dirty = META.json
+ allow_dirty = Makefile.PL
  [Git::Tag]
  [BumpVersionAfterRelease]
  [Git::Commit / Commit_Version_Bump]
@@ -42,6 +58,12 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  
  [Git::GatherDir]
  exclude_filename = LICENSE
+ exclude_filename = META.json
+ exclude_filename = Makefile.PL
+ [CopyFilesFromBuild]
+ copy = LICENSE
+ copy = META.json
+ copy = Makefile.PL
  [PruneCruft]
  [ManifestSkip]
  [MetaYAML]
@@ -65,20 +87,6 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
 
 Set the user whose repository should be linked in metadata. Defaults to
 C<Grinnz>, change this when the main repository is elsewhere.
-
-=head2 fromcpanfile
-
- fromcpanfile = 1
-
-Set to a true value to read prereqs from an existing cpanfile, instead of
-writing a cpanfile to the distribution.
-
-=head2 include_license
-
- include_license = 1
-
-Set to a true value to include the existing license file in the distribution,
-instead of generating a new one.
 
 =head2 makemaker
 
