@@ -5,4 +5,3 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
-fromcpanfile = 1
